# drama-smith

./: .gitignore  README.md
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/src/drama_smith/: __init__.py  main.py
backend/src/drama_smith/analysis/: __init__.py  models.py  prompts.py  state.py
backend/src/drama_smith/analysis/nodes/: __init__.py
backend/src/drama_smith/api/: __init__.py  analysis.py  auth.py  characters.py  deps.py  dramas.py  episodes.py  health.py  me.py  media.py  models.py  schemas.py  shots.py  tasks.py
backend/src/drama_smith/core/: __init__.py  config.py  crypto.py  errors.py  security.py
backend/src/drama_smith/db/: __init__.py  base.py  session.py
backend/src/drama_smith/db/models/: __init__.py  analyses.py  dramas.py  episode_characters.py  episodes.py  media.py  model_configs.py  refresh_tokens.py  script_versions.py  scripts.py  shot_characters.py  shots.py  tasks.py  users.py
backend/src/drama_smith/db/repositories/: __init__.py  analysis_repo.py  drama_repo.py  episode_character_repo.py  episode_repo.py  media_repo.py  model_config_repo.py  refresh_token_repo.py  script_repo.py  shot_repo.py  task_repo.py  user_repo.py
backend/src/drama_smith/graphs/: __init__.py  analysis_graph.py
backend/src/drama_smith/llm/: __init__.py  _probe.py  base.py  factory.py  litellm_image.py  litellm_text.py
backend/src/drama_smith/llm/adapters/: __init__.py
backend/src/drama_smith/migrations/: __init__.py  env.py  script.py.mako
backend/src/drama_smith/migrations/versions/: 04569358397f_add_model_configs.py  8f2a7c4d1e6b_add_character_media.py  bb519d176084_initial_users_and_refresh_tokens.py  c4a1f9e20b7d_add_analysis_core.py
backend/src/drama_smith/services/: __init__.py  analysis_service.py  auth_service.py  character_media_service.py  character_service.py  drama_service.py  episode_service.py  model_config_service.py  script_service.py  shot_service.py  task_service.py
backend/src/drama_smith/storage/: __init__.py  base.py  local.py
backend/src/drama_smith/tasks/: __init__.py  executor.py  progress.py  recover.py  states.py
backend/tests/: conftest.py  helpers.py  test_access_control.py  test_analysis_api.py  test_app_lifespan.py  test_auth_flow.py  test_brute_force.py  test_character_media_api.py  test_health.py  test_models_api.py
backend/tests/llm/: fakes.py  test_llm.py
backend/tests/unit/: test_analysis.py  test_analysis_graph.py  test_analysis_service.py  test_crypto.py  test_drama_service.py  test_episode_service.py  test_executor.py  test_media_repo.py  test_model_config_repo.py  test_model_config_service.py  test_repos.py  test_script_service.py  test_shot_service.py  test_storage.py
docs/: README.md
docs/architecture/: system-architecture.md
docs/requirements/: system-requirements.md
docs/requirements/features/: ai-config.md  analysis.md  character-library.md  user-auth.md
docs/tech-solution/: README.md  architecture.md  backend.md  database.md  frontend.md
frontend/: .env.example  .prettierignore  eslint.config.js  index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/api/: client.ts  endpoints.ts  errors.ts
frontend/src/components/: AppShell.tsx  Field.tsx  Overlay.tsx  RequireAuth.tsx  RequireSetup.tsx  ThemeToggle.tsx
frontend/src/components/ui/: avatar.tsx  card.tsx  input.tsx  (+6 more)
frontend/src/features/: .gitkeep
frontend/src/hooks/: .gitkeep  useTaskPolling.ts
frontend/src/realtime/: .gitkeep
frontend/src/routes/: DramasPage.tsx  EpisodePage.tsx  HomePage.tsx  LibraryPage.tsx  LoginPage.tsx  RegisterPage.tsx  SettingsPage.tsx  SetupPage.tsx  TasksPage.tsx
frontend/src/stores/: auth.ts  library.ts  ui.ts
frontend/src/types/: api.ts  auth.ts  drama.ts  index.ts  models.ts
frontend/src/utils/: applyTheme.ts  cn.ts  format.ts  storage.ts
openspec/: config.yaml
openspec/changes/add-character-media/: README.md  design.md  proposal.md  tasks.md
openspec/changes/setup-byok-config/: design.md  proposal.md  tasks.md
openspec/changes/setup-structured-analysis/: design.md  proposal.md  tasks.md
openspec/changes/setup-user-foundation/: design.md  proposal.md  tasks.md
openspec/specs/ai-config/: spec.md
openspec/specs/user-auth/: spec.md
(+22 files in other folders)
