[project]
name = "drama-smith"
version = "0.1.0"
description = "drama-smith 后端:结构化分析 + 分镜视频生产流水线(FastAPI + LangGraph)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "drama-smith" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncmy>=0.2.10",
    "alembic>=1.14",
    "argon2-cffi>=23.1",
    "pyjwt>=2.10",
    "cryptography>=43.0",
    "litellm>=1.55",
    "httpx>=0.28",
    "langgraph>=0.2",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "httpx>=0.28",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/drama_smith"]

# ---- Ruff:lint + format ----
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]
# Alembic env.py/versions 为生成式基础设施脚本,单独放行。
extend-exclude = ["src/drama_smith/migrations"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "ASYNC", "S", "C4"]

[tool.ruff.lint.per-file-ignores]
# 测试中允许 assert 与硬编码的测试口令(均为虚构值,非真实凭证)
"tests/*" = ["S101", "S105", "S106", "S107"]

[tool.ruff.format]
quote-style = "double"

# ---- mypy:strict ----
[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
packages = ["drama_smith", "tests"]
# Alembic env.py/versions 依赖大量 alembic 动态代理,不入严格类型检查。
exclude = ["src/drama_smith/migrations/"]

[[tool.mypy.overrides]]
# asyncmy / litellm 暂无(完整)类型存根
module = ["asyncmy.*", "litellm.*"]
ignore_missing_imports = true

# ---- pytest ----
[tool.pytest.ini_options]
asyncio_mode = "auto"
# 单一 session 级事件循环:缓存的 DB 引擎/连接池只绑定到一个 loop,跨用例复用
# 才不会触发 "Future attached to a different loop"。用例/夹具均在同一 loop 上运行。
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
addopts = "-ra --strict-markers --cov --cov-report=term-missing"

# ---- 覆盖率 ----
[tool.coverage.run]
# source 取已安装的 drama_smith 包(src layout 可编辑安装);migrations 为生成式基础设施,排除。
source = ["drama_smith"]
branch = true
# Starlette 中间件经 greenlet 桥接内部 ASGI 应用;不加此项,经 HTTP 路径的异步函数体
# (await 之后)会系统性漏统(实测 auth_service 由 43% 升至正确覆盖)。
concurrency = ["greenlet"]
omit = ["src/drama_smith/migrations/*"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
fail_under = 90
